sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
  var pos=1;
  while(pos<getNombreValeurs()){
    if(plusPetit(pos-1,pos)){
      pos=pos+1;
    }
    else{
      echange(pos-1,pos);
    }
    if(pos==-1){
      pos=1;
    }

}
}